Updated link to redirect to Reports action

--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -3,7 +3,7 @@
 <%=render 'form', workout: @workout %>
 <br>
 <%=link_to "New Workout with Details", new_workout_path, class: "btn btn-md btn-primary"%>
-<%=link_to "Current Week's Progress", workout_current_week_path, class: "btn btn-md btn-secondary"%>
+<%=link_to "Reports", workout_reports_path, class: "btn btn-md btn-secondary"%>
 <br><br>
 
 <%= render 'sorted_workouts', sorted_workouts: @workouts %>
