--- a/app/views/workouts/reports.html.erb
+++ b/app/views/workouts/reports.html.erb
@@ -1,15 +1,16 @@
 <h2>Reports</h2>
 
 <br>
-<%= form_tag(workout_reports_path, method: :get) do %>
+<%= form_tag(workout_reports_path, method: :get, id: 'filterReport') do %>
   <%=date_field_tag :date_filter_beg %>
   <%=date_field_tag :date_filter_end %>
-  <%=submit_tag 'Filter', name: nil %>
+  <%=submit_tag 'Filter', name: nil, id: "submitFilter", data: { disable_with: false } %>
+  <%=submit_tag 'Reset', name: nil, id: "clearFilter", data: { disable_with: false } %>
 <% end %>
 
 
 <br><br>
-<ul>
+<ul id="reportWorkoutList">
 <%@workouts.each do |workout| %>
   <li><%= link_to workout.name, workout_path(workout)%> <%= workout.date %></li>
 <% end %>
