--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,5 +1,4 @@
 <%= render 'shared/errors_messages', object: @workout %>
-
 <h2><%=@workout.name %> <small>| <%=full_date(@workout.date)%></small></h2>
 <div class="btn-group" role="group" aria-label="Basic example">
   <%= link_to "Edit Exercises", edit_workout_path(@workout), class: "btn btn-secondary", id: 'editExercises' %>
@@ -7,10 +6,6 @@
   <%= link_to "Update Reps", workout_exercises_path(@workout), class: "btn btn-primary" , id: 'updateReps'%>
 </div>
 <br>
-<br>
-<div>
-  <a href="#" class="js-next" data-id="<%=@workout.id%>">Next Workout</a>
-</div>
 <br>
 
 <div>
@@ -21,4 +16,12 @@
       </li>
     <% end %>
   </ul>
+</div>
+
+<div>
+<ul class="pagination justify-content-center">
+  <li class="page-item">
+    <a href="#" class="js-next page-link" data-id="<%=@workout.id%>">Next workout</a>
+  </li>
+</ul>
 </div>
