--- a/app/views/exercises/_exercise.html.erb
+++ b/app/views/exercises/_exercise.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%=link_to exercise.name, exercise_path(exercise)%> | <em><%= exercise.bodypart %></em>
+  <%=link_to exercise.name, exercise_path(exercise), data_id: exercise.id, class: "showExercise"%> | <em><%= exercise.bodypart %></em>
 </li>
