Updated app-container from class to id

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
           </div>
       <% end %>
     </div>
-    <div class="app-container">
+    <div id="app-container">
       <%= yield %>
     </div>
 
