--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <%= nav_bar_workout_login %>
           </li>
           <li class="nav-item">
-            <%= link_to('Exercises', exercises_path, class: "nav-link")  %>
+            <%= link_to('Exercises', exercises_path, class: "nav-link", id: "exercisesPath")  %>
           </li>
 
           <% if user_signed_in? %>
